# rtype

./: .gitignore  LICENSE  Makefile  RTypeUML.mdj  Rtype_server  TODO  rfc7990.txt  rtype_server
Client/: .gitignore  CMakeLists.txt  Client.sln
Client/Client/: ARawClient.cpp  ARawClient.hpp  ARawServer.cpp  ARawServer.hpp  AState.cpp  AState.hpp  App.cpp  App.hpp  Button.cpp  Button.hpp  Client.cpp  Client.hpp  Client.vcxproj  Client.vcxproj.filters  ClientErrors.hpp  ClientTcp.cpp  ClientTcp.hpp  CreationState.cpp  CreationState.hpp  EmptyState.cpp  EmptyState.hpp  Entity.cpp  Entity.hpp  FontLib.cpp  FontLib.hpp  GameState.cpp  GameState.hpp  IDrawable.hpp  IEvent.hpp  IONetworkManager.hpp  IPacketReader.hpp  IRawClient.hpp  IRawServer.hpp  IState.hpp  IUIComponent.cpp  IUIComponent.hpp  IWindow.hpp  InputField.cpp  InputField.hpp  Jukebox.cpp  (+36 more)
RtypeSRC/: CMakeLists.txt
RtypeSRC/buildWindows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Default.vcxproj  Default.vcxproj.filters  Enemy.vcxproj  Enemy.vcxproj.filters  Enemy2.vcxproj  Enemy2.vcxproj.filters  Network.vcxproj  Network.vcxproj.filters  Player-Script.sln  Player.vcxproj  Player.vcxproj.filters  RtypeGame.vcxproj  RtypeGame.vcxproj.filters  Rtype_server_exe.vcxproj  Rtype_server_exe.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rtype_client.vcxproj  rtype_client.vcxproj.filters  rtype_server.vcxproj  rtype_server.vcxproj.filters
RtypeSRC/buildWindows/Debug/: Rtype_server_exe.exp  Rtype_server_exe.lib
RtypeSRC/buildWindows/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
RtypeSRC/buildWindows/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
RtypeSRC/cmake/system/: SystemAndroid.cmake  SystemLinux.cmake  SystemWindows.cmake
RtypeSRC/include/Client/: ClientTcp.hpp
RtypeSRC/include/IONetwork/: IONetworkManager.hpp  IPacketReader.hpp  ISerializer.hpp  RtypePacketReader.hpp  RtypeSerializer.hpp
RtypeSRC/include/Network/Raw/: ARawClient.hpp  ARawServer.hpp  IRawClient.hpp  IRawServer.hpp
RtypeSRC/include/Network/sockets/: Client.hpp  Server.hpp  Sockets.hpp
RtypeSRC/include/Protocol/: IEvent.hpp  Protocol.h  TcpEvent.hpp  UdpEvent.hpp
RtypeSRC/include/Rtype/: #GameObject.hpp#  BoxCollider.hpp  GameManager.hpp  GameObject.hpp  GameObjectManager.hpp  ICollider.hpp  IGameManager.hpp  IndieParser.hpp  PrefabCreator.hpp  Properties.hpp  ScriptContener.hpp  Synchroniser.hpp
RtypeSRC/include/Script/: AScript.hpp
RtypeSRC/include/Server/: GameServer.hpp  Room.hpp  RoomClient.hpp  RoomManager.hpp  Server.hpp  server.hpp
RtypeSRC/include/Utils/: Chrono.hpp  MutexedContener.hpp  Vector.hpp
RtypeSRC/prefab/: Enemy.prefab  Player.prefab  game.prefab
RtypeSRC/script/: CMakeLists.txt  create_script.sh  delete_script.sh
RtypeSRC/script/include/Default/: Default.hpp
RtypeSRC/script/include/Enemy/: Enemy.hpp
RtypeSRC/script/include/Enemy2/: Enemy2.hpp
RtypeSRC/script/include/Player/: Player.hpp
RtypeSRC/script/include/RtypeGame/: RtypeGame.hpp
RtypeSRC/script/source/Default/: CMakeLists.txt  Default.cpp
RtypeSRC/script/source/Enemy/: CMakeLists.txt  Enemy.cpp
RtypeSRC/script/source/Enemy2/: CMakeLists.txt  Enemy2.cpp
RtypeSRC/script/source/Player/: CMakeLists.txt  Player.cpp
RtypeSRC/script/source/RtypeGame/: CMakeLists.txt  RtypeGame.cpp
RtypeSRC/source/: CMakeLists.txt
RtypeSRC/source/Client/: CMakeLists.txt  ClientTcp.cpp  main.cpp
RtypeSRC/source/IONetwork/: IONetwork.cmake  RtypePacketReader.cpp
RtypeSRC/source/Network/: CMakeLists.txt
RtypeSRC/source/Network/Raw/: ARawClient.cpp  ARawServer.cpp
RtypeSRC/source/Network/sockets/: Client.cpp  Server.cpp
RtypeSRC/source/Protocol/: Protocol.cmake  TcpEvent.cpp  UdpEvent.cpp
RtypeSRC/source/Rtype/: BoxCollider.cpp  GameManager.cpp  GameObject.cpp  GameObjectManager.cpp  IndieParser.cpp  LibraryLoader.cpp  PrefabCreator.cpp  Rtype.cmake  ScriptContener.cpp  Synchroniser.cpp
RtypeSRC/source/Server/: CMakeLists.txt  GameServer.cpp  Main.cpp  Room.cpp  RoomClient.cpp  RoomManager.cpp  Server.cpp  server.cmake  server.cpp
RtypeSRC/source/Utils/: Chrono.cpp  Utils.cmake
